--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.github.markushi:circlebutton:1.1'
+    compile 'com.github.deano2390:MaterialShowcaseView:1.1.0@aar'
 }
