--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.gajani.nikhar.EasyNotes"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 2
+        versionCode 3
         versionName "1.0"
     }
     buildTypes {
@@ -22,7 +22,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:recyclerview-v7:23.0.+'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.github.markushi:circlebutton:1.1'
     compile 'com.github.deano2390:MaterialShowcaseView:1.1.0@aar'
+    compile 'com.android.support:design:23.3.0'
+    compile 'com.wdullaer:materialdatetimepicker:2.3.0'
 }
