--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.gajani.nikhar.EasyNotes.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,12 +17,12 @@
         </activity>
 
         <provider
-            android:name="com.gajani.nikhar.EasyNotes.NotesProvider"
+            android:name=".NotesProvider"
             android:authorities="com.gajani.nikhar.EasyNotes"
             android:exported="false" />
 
-        <activity android:name="com.gajani.nikhar.EasyNotes.EditorActivity"
-            android:parentActivityName="com.gajani.nikhar.EasyNotes.MainActivity"></activity>
+        <activity android:name=".Editor"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
