--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.gajani.nikhar.EasyNotes"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 3
+        versionCode 6
         versionName "1.0"
     }
     buildTypes {
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.github.deano2390:MaterialShowcaseView:1.1.0@aar'
     compile 'com.android.support:design:23.3.0'
     compile 'com.wdullaer:materialdatetimepicker:2.3.0'
+    compile 'com.sothree.slidinguppanel:library:3.3.0'
 }
