--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         mavenLocal()
     }
     dependencies {
+        classpath 'com.android.tools.build:gradle:2.1.0'
         classpath 'com.android.tools.build:gradle:2.1.0-rc1'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -18,7 +19,9 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
+
     }
+
 }
 
 task clean(type: Delete) {
