--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.gajani.nikhar.EasyNotes"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 6
+        versionCode 7
         versionName "1.0"
     }
     buildTypes {
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:recyclerview-v7:23.0.+'
     compile 'com.android.support:appcompat-v7:23.3.0'
@@ -29,4 +29,12 @@ dependencies {
     compile 'com.android.support:design:23.3.0'
     compile 'com.wdullaer:materialdatetimepicker:2.3.0'
     compile 'com.sothree.slidinguppanel:library:3.3.0'
+    compile 'com.felipecsl.asymmetricgridview:library:2.0.1'
+    compile 'com.gordonwong:material-sheet-fab:1.2.1'
+    compile 'com.github.florent37:materialtextfield:1.0.5'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
+    compile 'com.jaredrummler:material-spinner:1.1.0'
+    compile files('libs/activation.jar')
+    compile files('libs/additionnal.jar')
+    compile files('libs/mail.jar')
 }
