--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gajani.nikhar.EasyNotes">
 
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.SEND_SMS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/index"
@@ -20,8 +24,16 @@
             android:name=".Editor"
             android:screenOrientation="portrait" />
         <activity android:name=".AlarmActivity" />
+        <activity android:name=".MainActivity" />
         <activity
-            android:name=".MainActivity">
+            android:name=".MainActivityNav"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
+        <activity android:name=".FirstLaunchingActivity" />
+        <activity android:name=".PasswordActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
