--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.gajani.nikhar.EasyNotes"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 7
+        versionCode 11
         versionName "1.0"
     }
     buildTypes {
@@ -22,18 +22,18 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile 'com.nispok:snackbar:2.11.+'
     compile 'com.android.support:recyclerview-v7:23.0.+'
     compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.github.markushi:circlebutton:1.1'
     compile 'com.github.deano2390:MaterialShowcaseView:1.1.0@aar'
     compile 'com.android.support:design:23.3.0'
     compile 'com.wdullaer:materialdatetimepicker:2.3.0'
     compile 'com.sothree.slidinguppanel:library:3.3.0'
     compile 'com.felipecsl.asymmetricgridview:library:2.0.1'
     compile 'com.gordonwong:material-sheet-fab:1.2.1'
-    compile 'com.github.florent37:materialtextfield:1.0.5'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.jaredrummler:material-spinner:1.1.0'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile files('libs/activation.jar')
     compile files('libs/additionnal.jar')
     compile files('libs/mail.jar')
