--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/index"
+        android:icon="@drawable/main"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -24,7 +24,6 @@
             android:name=".Editor"
             android:screenOrientation="portrait" />
         <activity android:name=".AlarmActivity" />
-        <activity android:name=".MainActivity" />
         <activity
             android:name=".MainActivityNav"
             android:label="@string/app_name"
@@ -33,7 +32,8 @@
         </activity>
         <activity android:name=".FirstLaunchingActivity" />
         <activity android:name=".PasswordActivity"
-            android:label="@string/app_name">
+            android:theme="@style/AppTheme.NoTitle"
+           >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
